[gd_scene load_steps=8 format=3 uid="uid://dhuc4lcl5clpc"]

[ext_resource type="Texture2D" uid="uid://c2pqrpkiqjoos" path="res://assets/sprites/enemies/original/ceiling shooter.png" id="1_a08p8"]
[ext_resource type="Script" path="res://enemy/original/ceiling_shooter.gd" id="1_dhti3"]
[ext_resource type="AudioStream" uid="uid://bauxjx3ka6rgt" path="res://assets/sounds/met_shoot_classic.wav" id="3_wtnc1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d82ua"]
atlas = ExtResource("1_a08p8")
region = Rect2(0, 0, 45, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_oau2s"]
atlas = ExtResource("1_a08p8")
region = Rect2(45, 0, 45, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_o6evi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d82ua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oau2s")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_34k2t"]
size = Vector2(19, 4)

[node name="ceiling_shooter" type="RigidBody2D"]
gravity_scale = -1.0
script = ExtResource("1_dhti3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.5, 5.5)
sprite_frames = SubResource("SpriteFrames_o6evi")
frame_progress = 0.261611

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_34k2t")

[node name="player_detect" type="Area2D" parent="."]

[node name="shoot_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="shoot_audio_effect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_wtnc1")

[node name="shoot_position" type="Marker2D" parent="."]
position = Vector2(0, 6)

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
